--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash": "^2.4.1",
     "mongodb": "^1.4.5",
     "q": "^1.1.2",
-    "sourced": "0.0.13"
+    "sourced": "^0.0.13"
   },
   "devDependencies": {
     "mocha": "^1.20.0",
