Fix mongodb package version to 2.1.17

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "extend": "^1.2.1",
     "llog": "0.0.0",
     "lodash": "^2.4.1",
-    "mongodb": "^2.1.21",
+    "mongodb": "2.1.17",
     "sourced": "^0.0.13"
   },
   "devDependencies": {
