--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "sourced-repo-mongo",
-  "version": "0.3.13",
+  "version": "0.4.0",
   "description": "mongo data store and repository for sourced-style event sourcing models",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "cconfig": "^0.0.0",
-    "debug": "^0.8.1",
+    "debug": "^3.1.0",
     "extend": "^1.2.1",
-    "llog": "0.0.0",
     "lodash": "^2.4.1",
-    "mongodb": "2.2.28",
+    "mongodb": "^3.0.5",
     "sourced": "0.1.4"
   },
   "devDependencies": {
