--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sourced-repo-mongo",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "mongo data store and repository for sourced-style event sourcing models",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
     "extend": "^3.0.1",
     "lodash": "^4.17.10",
     "mongodb": "^3.0.10",
-    "sourced": "0.1.4"
+    "sourced": "^0.1.5"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
