--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "sourced": "0.1.4"
   },
   "devDependencies": {
+    "jest": "^23.3.0",
     "mocha": "^5.2.0",
     "should": "^13.2.1"
   },
   "scripts": {
-    "test": "mocha test -R spec --exit"
+    "test": "mocha test -R spec --exit",
+    "jest": "jest --coverage --forceExit"
   },
   "repository": {
     "type": "git",
