feat: mongodb replica set support (#43)
BREAKING CHANGE: Now defaults to new mongo db client options `useNewUrlParser` and `useUnifiedTopology`. Travis changed to test last two Node versions, 12 and 14.

* feat: mongodb replica set support

* chore: add 10 to tests

* fix: lock to sourced 2.0.5

* fix: sourced bug - upgrade to fixed 2.0.7

* fix: sourced@2.0.8

* chore: update travis file

* chore: rm debug log statements

* chore: rm debug log statements

* fix: make options configurable

* fix: cherry pick changes from @debianw - PR #35

Co-authored-by: Waly <debianw@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,18 @@
 language: node_js
 node_js:
-  - 8
-  - 10
-  - 11
-
+  - '12'
+  - '14'
+cache: npm
 notifications:
   email: false
-
-before_install:
-  - npm install -g codecov
 script:
   - make test
+after_success:
+  - npm install -g codecov
   - codecov
-
 branches:
   except:
     - '/^v\d+\.\d+\.\d+$/'
-
 jobs:
   include:
     - stage: deploy
