--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "test": "test"
   },
   "dependencies": {
-    "debug": "^4.1.0",
-    "lodash": "^4.17.10",
-    "mongodb": "^3.0.10",
-    "sourced": "^2.0.0"
+    "debug": "4.1.1",
+    "lodash": "4.17.15",
+    "mongodb": "3.5.7",
+    "sourced": "2.0.8"
   },
   "devDependencies": {
-    "jest": "24.7.1",
-    "mocha": "6.0.0",
+    "jest": "26.0.1",
+    "mocha": "7.2.0",
     "should": "13.2.3"
   },
   "scripts": {
